...
                                <rect key="frame" x="16" y="329" width="361" height="32"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Channel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M4D-1s-FcG">
                                        <rect key="frame" x="0.0" y="0.0" width="129.33333333333334" height="32"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Remote Control" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKi-UL-mje">
                                <rect key="frame" x="16" y="306" width="361" height="31.333333333333314"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
...
                                <rect key="frame" x="16" y="376" width="361" height="31"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Power" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEx-9l-rs5">
                                        <rect key="frame" x="0.0" y="0.0" width="105" height="31"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="16" y="438" width="361" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beD-c2-7fq">
                                        <rect key="frame" x="0.0" y="0.0" width="57" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                </constraints>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="gray" title="CH+"/>
                                                <connections>
                                                    <action selector="channelModification:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AGD-1Z-fs0"/>
...
                                                </constraints>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="gray" title="CH-"/>
                                                <connections>
                                                    <action selector="channelModification:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZRs-qh-vh5"/>
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorite Channel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OBo-5f-6qF">
                                <rect key="frame" x="16" y="666" width="145" height="61"/>
                                <constraints>
...
                                        <rect key="frame" x="23" y="78" width="347" height="164"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My TV" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="64" translatesAutoresizingMaskIntoConstraints="NO" id="JdA-Xe-qwS">
                                                <rect key="frame" x="0.0" y="72" width="49" height="20.333333333333329"/>
                                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
...
                                                <rect key="frame" x="120.99999999999999" y="15.666666666666671" width="129.66666666666663" height="133"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TV Power:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="77.700000000000003" translatesAutoresizingMaskIntoConstraints
                                                        <rect key="frame" x="0.0" y="0.0" width="77.666666666666671" height="20.333333333333332"/>
                                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speaker Volume:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="128.30000000000001" translatesAutoresizingMaskIntoConst
                                                        <rect key="frame" x="0.0" y="56.333333333333336" width="128.33333333333334" height="20.333333333333336"/>
                                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Channel:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="129.30000000000001" translatesAutoresizingMaskIntoCons
                                                        <rect key="frame" x="0.0" y="112.66666666666667" width="129.33333333333334" height="20.333333333333329"/>
                                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
...
