...
    var originalTitles = ["POGO", "Star Sports", "NBC", "Nature"]
    var originalValues = [07, 01, 02, 32]
    override func viewDidLoad() {
        super.viewDidLoad()
        channelValue.text = "50"
        // Do any additional setup after loading the view.
        powervalue.accessibilityIdentifier = "TV_Power_Value"
        
        volumeValue.accessibilityIdentifier = "TV_Speaker_Volume_Value"
        
        channelValue.accessibilityIdentifier = "Current_Channel_Value"
        powerSwitch.accessibilityIdentifier = "Power_Switch"
        volumeslider.accessibilityIdentifier = "Volume_Slider"
        favouriteChannel.accessibilityIdentifier = "Favorite_Channel_Segmented_Control"
        for (index, title) in originalTitles.enumerated() {
                    favouriteChannel.setTitle(title, forSegmentAt: index)
                }
       
        powerOff()
    }
...
